@startuml DomainModel

hide circle
hide methods
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0




  class PickingPlanService {
  }

  class PickingPlan {
    id
    weight
    heuristic
  }

  class Trolley {
    id
    weight
  }

  class PickingAssignment {
    sku
    qty
    boxId
    aisle
    bay
    status
  }

  class Allocation {
    sku
    qty
    boxId
    aisle
    bay
  }

  class Item {
    name
    category
    unit
    weight
  }



  interface PackingHeuristic {
  }

  class FirstFitHeuristic {
  }

  class FirstFitDecreasingHeuristic {
  }

  class BestFitDecreasingHeuristic {
  }

WarehousePlanner --> PickingPlanService : uses

PickingPlanService --> PackingHeuristic : selects
PickingPlanService --> PickingPlan : generates
PickingPlanService --> Allocation : processes

PickingPlan --> Trolley
Trolley --> PickingAssignment
PickingAssignment --> Item

PackingHeuristic <|-- FirstFitHeuristic : implements
PackingHeuristic <|-- FirstFitDecreasingHeuristic : implements
PackingHeuristic <|-- BestFitDecreasingHeuristic : implements

Allocation --> Item


@enduml